# meshclaw-public

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PUBLICATION.md  README.md  SECURITY.md  go.mod  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
cmd/argos-ui-runner/: calendar_helper.swift  contacts_helper.swift  main.go  main_test.go  platform_darwin.go  platform_other.go  reminder_helper.swift  screen_recorder.swift
cmd/meshclaw/: agent_state_test.go  agent_workloads_test.go  argos_doctor_display_test.go  argos_runner_setup_test.go  argos_signal_attachments_test.go  assistant_brief_target_test.go  assistant_setup_test.go  autoheal_plan_test.go  briefing_command_test.go  dev_memo.go  dev_memo_test.go  guard_vault_use_test.go  init_test.go  logscan_cli_test.go  main.go  matrix_ai_test.go  mcp.go  (+20 more)
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE_2026-05-23.md  ARGOS_AND_MESHCLAW.md  ARGOS_ASSISTANT_SCENARIOS.md  ARGOS_CAPABILITIES_AND_SCENARIOS.md  ARGOS_COMMERCIAL_ASSISTANT_CONTRACT.md  ARGOS_COMMERCIAL_BASELINE.md  ASSISTANT_PRODUCT_DIRECTION.md  DIRECTION.md  FRONTENDS.md  GUARD.md  INVENTORY.md  MAIL.md  MATRIX.md  MCP_PERSONAL_ASSISTANT_UPGRADE.md  MCP_SETUP.md  MONITORING_AGENT.md  NODE_REPORT_SCHEMA.md  POLICY.md  PUBLIC_INSTALL_UX.md  README.md  RECONCILIATION_CONTROLLER.md  ROADMAP_2026-05-23.md  WORKSPACES.md
pypi/: README.md  pyproject.toml
pypi/meshclaw_go/: __init__.py
scripts/: argos-dashboard.sh  argos-interactive-listener.sh  argos-signal-dispatcher.sh  assistant-e2e-smoke.sh  assistant-evening.sh  assistant-morning.sh  assistant-release-regression.sh  build-argos-ui-runner-app.sh  daily-news-brief.sh  domain-health.sh  install-local.sh  local-ai-briefing.sh  mcp-client-status.sh  mcp-restart-stale.sh  product-health.sh  release-dirty-audit.sh  release-preflight.sh  status-index.sh
tests/: test_python_cli.py
workflows/: fleet-health-demo.json  meshclaw-ops-orchestration-demo.json
(+187 files in other folders)
